--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
       <hr>
     </section>
   </main>
-  <div class="attribution">
+  <p class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    Coded by <a href="https://www.frontendmentor.io/profile/exploitenomah">Exploit Enomah</a>.
+  </p>
   <!-- <script>
     setTimeout(() => {
       let enableScript = prompt('Enable Script? \n Answer yes or n').toLowerCase();
