--- a/index.html
+++ b/index.html
@@ -22,14 +22,16 @@
 </head>
 
 <body> 
+  <header>
      <h1>
       hello world
     </h1>
+  </header>
   <main class="card">
 
       <picture class="box">
         <source media="(min-width: 850px)" srcset="./images/illustration-box-desktop.svg">
-        <img src="" alt="">
+        <img src="./images/blablabla.png" alt="">
       </picture>
     <section class="images">
       <h2>
@@ -110,8 +112,8 @@
     </section>
   </main>
   <p class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="https://www.frontendmentor.io/profile/exploitenomah">Exploit Enomah</a>.
+    <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"> Challenge by Frontend Mentor</a>.
+    <a href="https://www.frontendmentor.io/profile/exploitenomah"> Coded by Exploit Enomah</a>.
   </p>
   <!-- <script>
     setTimeout(() => {
