--- a/index.html
+++ b/index.html
@@ -48,10 +48,7 @@
     <section class="faqs">
       <h2>FAQ</h2>
       <details class="faq">
-        <summary class="question">
-          <p>
           How many team members can I invite?
-          </p>
           <img src="./images/icon-arrow-down.svg" alt="">
         </summary>
         <p class="answer">
@@ -62,8 +59,7 @@
       <hr>
       <details class="faq" open>
         <summary class="question">
-          <p>
-          What is the maximum file upload size?  </p>
+          What is the maximum file upload size?
           <img src="./images/icon-arrow-down.svg" alt="">
         </summary>
         <p class="answer">
@@ -73,9 +69,7 @@
       <hr>
       <details class="faq">
         <summary class="question">
-        <p>
            How do I reset my password?
-        </p>
           <img src="./images/icon-arrow-down.svg" alt="">
         </summary>
         <p class="answer">
@@ -86,9 +80,7 @@
       <hr>
       <details class="faq">
         <summary class="question">
-          <p>
             Can I cancel my subscription?
-          </p>
           <img src="./images/icon-arrow-down.svg" alt="">
         </summary>
         <p class="answer">
@@ -99,9 +91,7 @@
       <hr>
       <details class="faq">
         <summary class="question">
-          <p>
            Do you provide additional support?
-          </p>
           <img src="./images/icon-arrow-down.svg" alt="">
         </summary>
         <p class="answer">
