--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body> 
-  <header>
+  <header style="position: ab">
      <h1>
       hello world
     </h1>
@@ -48,6 +48,7 @@
     <section class="faqs">
       <h2>FAQ</h2>
       <details class="faq">
+        <summary>
           How many team members can I invite?
           <img src="./images/icon-arrow-down.svg" alt="">
         </summary>
