--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section class="faqs">
       <h2>FAQ</h2>
       <details class="faq">
-        <summary>
+        <summary class="question">
           How many team members can I invite?
           <img src="./images/icon-arrow-down.svg" alt="">
         </summary>
