--- a/index.html
+++ b/index.html
@@ -102,10 +102,15 @@
       <hr>
     </section>
   </main>
-  <p class="attribution">
-    <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"> Challenge by Frontend Mentor</a>.
-    <a href="https://www.frontendmentor.io/profile/exploitenomah"> Coded by Exploit Enomah</a>.
-  </p>
+  <article>
+    <h4 class="attribution">
+    Challenge by  <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    </h4>
+    <p>Coded by<a href="https://www.frontendmentor.io/profile/exploitenomah">  Exploit Enomah</a>.
+    </p> 
+ 
+  </article>
+ 
   <!-- <script>
     setTimeout(() => {
       let enableScript = prompt('Enable Script? \n Answer yes or n').toLowerCase();
