--- a/index.html
+++ b/index.html
@@ -102,14 +102,13 @@
       <hr>
     </section>
   </main>
-  <article>
-    <h4 class="attribution">
+  <aside>
+    <h3 class="attribution">
     Challenge by  <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     </h4>
     <p>Coded by<a href="https://www.frontendmentor.io/profile/exploitenomah">  Exploit Enomah</a>.
-    </p> 
- 
-  </article>
+    </p>
+  </aside>
  
   <!-- <script>
     setTimeout(() => {
